[package]
name = "p2p-messages"
version = "0.1.0"
readme = "README.md"

edition = "2021"
license = "MIT/Apache-2.0"

[[bin]]
name = "raft-key-value"
path = "src/bin/main.rs"

[dependencies]
openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde"] }

actix-web = "4.0.0-rc.2"
async-trait = "0.1.36"
clap = { version = "4.1.11", features = ["derive", "env"] }
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "1.0", default-features = false, features = ["sync"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }

[dev-dependencies]
anyhow = "1.0.63"
maplit = "1.0.2"

[features]

[package.metadata.docs.rs]
all-features = true
